# WSR32

./: .gitignore  .scalafmt.conf  CMakeLists.txt  Makefile  README.md  build.sc
src/main/: ALU.scala  Elaborate.scala  ImmGenerator.scala  PCRegister.scala  RegisterFile.scala
src/main/cpp/: core_sim.cpp
src/main/resources/cpp/: core_sim.cpp
src/main/resources/verilog/: Ebreak.v  InvInst.v
src/main/scala/: ALU.scala  Core.scala  EXU.scala  Ebreak.scala  Elaborate.scala  IDU.scala  IFU.scala  InvInst.scala
src/test/: addi.asm  addi.disas
